# thomas_MBRL

./: .gitignore  README.md
scripts/: list_envs.py  plot_episode_mean.py  plot_return.py  random_agent.py  zero_agent.py
scripts/compare/: plot_manifest.py  train_all.py
scripts/mbrl/: play.py  train.py
scripts/mppi/: run_go2_velocity_command_mppi.py  run_go2_velocity_mppi.py  test_exported_policy.py
scripts/rsl_rl/: play.py  train.py
scripts/skrl/: export_policy.py  play.py  train.py
source/thomas_MBRL/: pyproject.toml  setup.py
source/thomas_MBRL/config/: extension.toml  velocity_env_cfg.py
source/thomas_MBRL/docs/: CHANGELOG.rst
source/thomas_MBRL/thomas_MBRL/: __init__.py  ui_extension_example.py
source/thomas_MBRL/thomas_MBRL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/thomas_MBRL/thomas_MBRL/agents/: skrl_ppo_cfg.py
source/thomas_MBRL/thomas_MBRL/config/: extension.toml  velocity_env_cfg.py
source/thomas_MBRL/thomas_MBRL/controllers/: torch_policy_wrapper.py
source/thomas_MBRL/thomas_MBRL/envs/: __init__.py  go2_velocity_env.py  go2_velocity_env_cfg.py
source/thomas_MBRL/thomas_MBRL/mbrl/: __init__.py  models.py  planner.py  prior.py  replay.py
source/thomas_MBRL/thomas_MBRL/robots/: go2.py
source/thomas_MBRL/thomas_MBRL/tasks/manager_based/thomas_mbrl/: __init__.py  flat_env_cfg.py  flat_env_sac_cfg.py  rough_env_cfg.py  thomas_mbrl_env_cfg.py
source/thomas_MBRL/thomas_MBRL/tasks/manager_based/thomas_mbrl/agents/: skrl_rand_ppo_cfg.yaml  skrl_rough_ppo_cfg.yaml  skrl_sac_cfg.yaml
(+3 files in other folders)
